# workflow-manager

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  Cargo.toml  IMPL.md  PROMPT.md  PROMTP2.md  README.md  TASKS2.md  TASKS3.md  TEST_DISCOVERY.md  task_review_report.txt  tasks.yaml  tasks2.yaml  tasks3.yaml  tasks4.yaml  tasks5.yaml  tasks_overview.yaml  workflow-manager-flow.mmd
workflow-manager/: ARCH.md  CONTEXT.md  CONTEXT2.md  Cargo.toml  ID.md  IMPL.md  IMPLEMENTATION_SUMMARY.md  NEW_PLAN.md  PLAN.md  PROMPT.md  REFACTOR.md  SQL.md  TAB_IMPLEMENTATION_PLAN.md  TASKS.md  THREADING_RESEARCH.md  TUI_VIEWS.md  codebase_analysis_20251014_111605.yaml  codebase_analysis_20251014_112019.yaml  codebase_analysis_20251014_175018.yaml  research_prompts_20251014_175137.yaml
workflow-manager-sdk/: Cargo.toml
workflow-manager-sdk/src/: lib.rs
workflow-manager/LOGS/: workflow_research_20251028_145400.jsonl  workflow_research_20251028_150033.jsonl  workflow_research_20251028_150041.jsonl  workflow_research_20251028_150043.jsonl  workflow_research_20251028_150044.jsonl
workflow-manager/OUTPUT/: tasks_20251028_171751.yaml  tasks_overview_20251028_170813.yaml
workflow-manager/RESULTS/: research_result_1_20251013_093441.yaml  research_result_1_20251014_175137.yaml  research_result_1_20251014_191932.yaml  research_result_1_20251015_183308.yaml  research_result_2_20251013_093441.yaml  research_result_2_20251014_175137.yaml  research_result_2_20251014_182456.yaml  research_result_2_20251014_191932.yaml  research_result_2_20251015_183308.yaml  research_result_3_20251014_175137.yaml  research_result_3_20251014_182456.yaml  research_result_3_20251014_191932.yaml  research_result_3_20251015_183308.yaml  research_result_4_20251014_175137.yaml  research_result_4_20251014_182456.yaml  research_result_4_20251014_191932.yaml  research_result_4_20251015_183308.yaml  research_result_5_20251014_175137.yaml  research_result_5_20251014_182456.yaml  research_result_5_20251014_184840.yaml  research_result_5_20251014_190036.yaml  research_result_5_20251014_191932.yaml  research_result_5_20251015_183308.yaml  research_result_6_20251014_175137.yaml  research_result_6_20251014_182456.yaml  research_result_6_20251014_190036.yaml  research_result_6_20251014_191932.yaml  research_result_6_20251015_183308.yaml  research_result_7_20251014_175137.yaml  research_result_7_20251014_182456.yaml  research_result_7_20251014_191932.yaml  research_result_7_20251015_183308.yaml  research_results_20251014_175617.yaml  research_results_20251014_183016.yaml  research_results_20251014_192630.yaml  research_results_20251015_183903.yaml
workflow-manager/TRASH/: DATA_SOURCES_ANALYSIS.md  IMPL2.md  KNOWLEDGE.md  NEW_PLAN.md  PLAN.md  REFACTOR.md  RUST_MCP_CODE_SEARCH_RESEARCH.md  SEARCH.md  STATE_OF_THE_ART_CODEBASE_ANALYSIS.md  codebase_analysis_20251015_185037.yaml  codebase_analysis_20251018_194245.yaml  codebase_analysis_20251019_093219.yaml  research_prompts_20251019_093242.yaml
workflow-manager/docs/: WORKFLOW_DEVELOPMENT_GUIDE.md
workflow-manager/examples/: new_research_agent.rs  research_agent.rs  tasks_agent.rs  test2.rs  test_discovery.rs  test_workflow.rs
workflow-manager/src/: app.rs  chat.rs  database.rs  discovery.rs  lib.rs  main.rs  mcp_tools.rs  models.rs  runtime.rs  ui.rs  utils.rs
workflow-manager/src/app/: command_handlers.rs  commands.rs  file_browser.rs  history.rs  mod.rs  navigation.rs  notifications.rs  tabs.rs  task_registry.rs  workflow_ops.rs
workflow-manager/src/app/models/: app.rs  (+6 more)
workflow-manager/src/research/: cli.rs  mod.rs  phase0_analyze.rs  phase1_prompts.rs  phase1_validate_analysis.rs  phase2_prompts.rs  phase2_research.rs  phase3_research.rs  phase3_validate.rs  phase4_synthesize.rs  phase4_validate.rs  phase5_synthesize.rs  types.rs  workflow.rs
workflow-manager/src/task_planner/: cli.rs  execution_plan.rs  mod.rs  phase0_overview.rs  phase1_expand.rs  phase2_review.rs  step1_overview.rs  step2_expand.rs  step3_review.rs  types.rs  utils.rs  workflow.rs
workflow-manager/src/ui/: chat_view.rs  components.rs  header_footer.rs  mod.rs  notifications.rs  tab_views.rs  workflow_views.rs
workflow-manager/src/workflow_utils/: agent.rs  batch.rs  mod.rs  task.rs  yaml.rs
workflow-manager/templates/workflow-template/: Cargo.toml.template
workflow-manager/tests/: README.md  TEST_REPORT.md  research_tests.rs  task_planner_tests.rs
workflow-manager/tests/research/: common.rs  mod.rs  test_helpers.rs  test_integration.rs  test_types.rs  test_workflow_config.rs
(+93 files in other folders)
