[workspace]
resolver = "2"
members = [
    "workflow-manager",
    "workflow-manager-sdk",
    "workflow-manager-macros",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = "0.4"
